--- a/templates/appointment/index.html
+++ b/templates/appointment/index.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+
+{% block style %}
+<link href="{% static 'time/css/datetimepicker.css' %}">
+<script src="{% static 'time/js/datetimepicker.js' %}"></script>
+{% endblock style %}
+
 {% block maincontent %}
 <!--inner banner-->
 <div class="inner-banner">
@@ -33,8 +39,6 @@
               {{ form|crispy }}
 
 
-
-
               <div class="col-md-12 text-center">
                 <input value="Book Appointment" type="submit">
               </div>
@@ -47,3 +51,12 @@
 </div>
 <!--Main Content End-->
 {% endblock maincontent %}
+
+
+{% block extra_js %}
+<script>
+$(function () {
+  $("#id_appointment_time").datetimepicker();
+});
+</script>
+{% endblock extra_js %}
