--- a/templates/partials/_js.html
+++ b/templates/partials/_js.html
@@ -2,23 +2,16 @@
 <!--Wrapper End-->
 {% load static %}
 {% load message_type_checker %}
-<!--<script src="{% static 'heartcare/js/jquery.min.js' %}"></script>-->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="{% static 'heartcare/js/jquery.min.js' %}"></script>
 
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
-<!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>-->
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>-->
-
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 <script src="{% static 'heartcare/js/bootstrap.min.js' %}"></script>
-<script src="{% static 'heartcare/js/js/jquery.prettyPhoto.js' %}"></script>
 <script src="{% static 'heartcare/js/owl.carousel.min.js' %}"></script>
-<!--<script src="{% static 'heartcare/js/bootstrap-datetimepicker.min.js' %}"></script>-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js" integrity="sha512-GDey37RZAxFkpFeJorEUwNoIbkTwsyC736KNSYucu1WJWFK9qTdzYub8ATxktr6Dwke7nbFaioypzbDOQykoRg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="{% static 'heartcare/js/bootstrap-datetimepicker.min.js' %}"></script>
 <script src="{% static 'heartcare/js/custom.js' %}"></script>
 <script src="{% static 'custom/sweetalert2.all.min.js' %}"></script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108110591-1"></script>
+
+
 <script>
   window.dataLayer = window.dataLayer || [];
 
@@ -85,4 +78,5 @@ $("#district").change(function () {
     });
 
 });
+
 </script>
