--- a/templates/appointment/index.html
+++ b/templates/appointment/index.html
@@ -5,6 +5,17 @@
 {% block style %}
 <link href="{% static 'time/css/datetimepicker.css' %}">
 <script src="{% static 'time/js/datetimepicker.js' %}"></script>
+
+<style>
+  .row.form-field {
+    display: grid;
+    grid-template-columns: 0% 50% 50%;
+    grid-gap: 2px;
+}
+  span.asteriskField {
+     color: #f00;
+}
+</style>
 {% endblock style %}
 
 {% block maincontent %}
@@ -33,10 +44,45 @@
       <div class="row">
         <div class="col-md-6"><img src="{% static 'heartcare/images/form-pic.jpg' %}" alt=""></div>
         <div class="col-md-6">
-          <form action="" enctype="multipart/form-data" class="form-register" method="POST" accept-charset="UTF-8">
+          <form id="application_form" action="" enctype="multipart/form-data" class="form-register" method="POST" accept-charset="UTF-8"
+                data-upazila-url={% url 'load_upazila' %} data-district-url={% url 'load_district' %} data-doctor-url={% url 'patient_ms:load_doctor' %}>
             {% csrf_token %}
             <div class="app-form">
-              {{ form|crispy }}
+                <div class="row form-field">
+                    <div class="col-6">
+                      {{ form.speciality|as_crispy_field }}
+                    </div>
+                    <div class="col-6">
+                       {{ form.division|as_crispy_field }}
+                    </div>
+                </div>
+                <div class="row form-field">
+                    <div class="col-6">
+                      {{ form.district|as_crispy_field }}
+                    </div>
+                    <div class="col-6">
+                       {{ form.upazila|as_crispy_field }}
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12">
+                      {{ form.doctor|as_crispy_field }}
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12">
+                      {{ form.problem|as_crispy_field }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                      {{ form.appointment_time|as_crispy_field }}
+                    </div>
+                </div>
+
+
 
 
               <div class="col-md-12 text-center">
@@ -61,4 +107,7 @@ $(function () {
   })
 });
 </script>
+<script src="{% static 'heartcare/data_load.js' %}"></script>
+
+
 {% endblock extra_js %}
